--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "react-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:7001",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/echarts": "^4.6.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.44",
+    "@types/qs": "^6.9.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.3.3",
+    "axios": "^0.19.2",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
+    "moment": "^2.26.0",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
